force-app/main/default/objects/Lead/fields/ADR__c.field-meta.xml
<CustomField>
    <fullName>ADR__c</fullName>
    <description>Average daily rate for a hospitality asset, as stated in the broker email. Hospitality only.</description>
    <inlineHelpText>Populated by LLM extraction from the inbound broker email; null when not stated in the email.</inlineHelpText>
    <label>ADR</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>