force-app/main/default/objects/Lead/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <description>When the lead was approved for underwriting (audit). Stamped automatically when Approved for Underwriting is checked.</description>
    <label>Approval Date</label>
    <type>DateTime</type>
</CustomField>