force-app/main/default/objects/Lead/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who approved this lead for underwriting (audit). Stamped automatically when Approved for Underwriting is checked.</description>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approved Leads</relationshipLabel>
    <relationshipName>Approved_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>