force-app/main/default/objects/Lead/fields/Approved_for_UW__c.field-meta.xml
<CustomField>
    <fullName>Approved_for_UW__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lead intake gate - checked when the deal is approved to move into underwriting. Stamps Approved_By__c / Approval_Date__c via the Lead_Intake_Stamp flow.</description>
    <label>Approved for Underwriting</label>
    <type>Checkbox</type>
</CustomField>