force-app/main/default/objects/Lead/fields/BP_Expiry__c.field-meta.xml
<CustomField>
    <fullName>BP_Expiry__c</fullName>
    <description>Broker protection expiry = First Seen Date (fallback CreatedDate) + 90 days. Mirrors LeadFunnelController.BP_WINDOW_DAYS.</description>
    <formula>DATEVALUE(IF(ISBLANK(First_Seen_Date__c), CreatedDate, First_Seen_Date__c)) + 90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BP Expiry</label>
    <type>Date</type>
</CustomField>