force-app/main/default/objects/Lead/fields/Broker_First__c.field-meta.xml
<CustomField>
    <fullName>Broker_First__c</fullName>
    <label>Broker First</label>
    <length>255</length>
    <type>Text</type>
</CustomField>