force-app/main/default/objects/Lead/fields/Broker_Priority__c.field-meta.xml
<CustomField>
    <fullName>Broker_Priority__c</fullName>
    <description>Priority of the originating broker. Copied from the broker Contact on portal submission; drives lead ordering (priority first, then First Seen Date).</description>
    <label>Broker Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>