force-app/main/default/objects/Lead/fields/Building_SF__c.field-meta.xml
<CustomField>
    <fullName>Building_SF__c</fullName>
    <description>Building square footage as stated in the broker email.</description>
    <inlineHelpText>Populated by LLM extraction from the inbound broker email; null when not stated in the email.</inlineHelpText>
    <label>Building SF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>