force-app/main/default/objects/Lead/fields/CoStar_Link__c.field-meta.xml
<CustomField>
    <fullName>CoStar_Link__c</fullName>
    <label>CoStar Link</label>
    <type>Url</type>
</CustomField>