force-app/main/default/objects/Lead/fields/Days_in_System__c.field-meta.xml
<CustomField>
    <fullName>Days_in_System__c</fullName>
    <description>Age in days since First Seen Date (fallback CreatedDate), formatted &quot;Nd&quot;. Mirrors LeadFunnelController.</description>
    <formula>TEXT(TODAY() - DATEVALUE(IF(ISBLANK(First_Seen_Date__c), CreatedDate, First_Seen_Date__c))) &amp; &quot;d&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in System</label>
    <type>Text</type>
</CustomField>