force-app/main/default/objects/Lead/fields/Deal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Deal_Notes__c</fullName>
    <label>Deal Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>