force-app/main/default/objects/Lead/fields/Deal_Room_Link__c.field-meta.xml
<CustomField>
    <fullName>Deal_Room_Link__c</fullName>
    <description>Link to the deal room / offering materials, as stated in the broker email. Matches the existing CoStar_Link__c / Placer_AI_Link__c convention.</description>
    <inlineHelpText>Populated by LLM extraction from the inbound broker email; null when not stated in the email.</inlineHelpText>
    <label>Deal Room Link</label>
    <type>Url</type>
</CustomField>