force-app/main/default/objects/Lead/fields/Disqualification_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualification_Reason__c</fullName>
    <label>Disqualification Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wrong Market</fullName>
            </value>
            <value>
                <fullName>Price Too High</fullName>
            </value>
            <value>
                <fullName>Bad Anchor Tenant</fullName>
            </value>
            <value>
                <fullName>Duplicate Deal</fullName>
            </value>
            <value>
                <fullName>Portfolio Declined</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>