force-app/main/default/objects/Lead/fields/DPEG_First__c.field-meta.xml
<CustomField>
    <fullName>DPEG_First__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DPEG First</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>DPEG First</relationshipLabel>
    <relationshipName>DPEG_First_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>