force-app/main/default/objects/Lead/fields/Duplicate_Flag__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE when the same property address was already submitted within the broker-protection window. Pairs with Broker_First__c / DPEG_First__c / BP_Expiry__c for duplicate detection.</description>
    <label>Duplicate Flag</label>
    <type>Checkbox</type>
</CustomField>