force-app/main/default/objects/Lead/fields/Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Email_Subject__c</fullName>
    <label>Email Subject</label>
    <length>255</length>
    <description>Subject line of the inbound broker email that created this Lead.</description>
    <inlineHelpText>Captured verbatim from the inbound email's Subject line.</inlineHelpText>
    <type>Text</type>
</CustomField>